2020-01-08  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed gardening. Add expectations for several tests failing

        * TestExpectations.json:

2020-01-08  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update W3C WebDriver imported tests.

        * TestExpectations.json:
        * imported/w3c/importer.json:
        * imported/w3c/tools/webdriver/webdriver/__init__.py:
        * imported/w3c/tools/webdriver/webdriver/client.py:
        * imported/w3c/tools/webdriver/webdriver/error.py:
        * imported/w3c/tools/webdriver/webdriver/transport.py:
        * imported/w3c/tools/wptrunner/docs/expectation.rst:
        * imported/w3c/tools/wptrunner/requirements.txt:
        * imported/w3c/tools/wptrunner/requirements_firefox.txt:
        * imported/w3c/tools/wptrunner/tox.ini:
        * imported/w3c/tools/wptrunner/wptrunner/browsers/__init__.py:
        * imported/w3c/tools/wptrunner/wptrunner/browsers/android_weblayer.py: Added.
        * imported/w3c/tools/wptrunner/wptrunner/browsers/base.py:
        * imported/w3c/tools/wptrunner/wptrunner/browsers/servo.py:
        * imported/w3c/tools/wptrunner/wptrunner/browsers/servodriver.py:
        * imported/w3c/tools/wptrunner/wptrunner/browsers/webkit.py:
        * imported/w3c/tools/wptrunner/wptrunner/executors/base.py:
        * imported/w3c/tools/wptrunner/wptrunner/executors/executormarionette.py:
        * imported/w3c/tools/wptrunner/wptrunner/executors/executorselenium.py:
        * imported/w3c/tools/wptrunner/wptrunner/executors/executorservo.py:
        * imported/w3c/tools/wptrunner/wptrunner/executors/executorservodriver.py:
        * imported/w3c/tools/wptrunner/wptrunner/executors/executorwebdriver.py:
        * imported/w3c/tools/wptrunner/wptrunner/executors/protocol.py:
        * imported/w3c/tools/wptrunner/wptrunner/executors/reftest-wait_marionette.js: Removed.
        * imported/w3c/tools/wptrunner/wptrunner/executors/reftest-wait_webdriver.js: